# TaRa_Health

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/plan/: phase-docs-and-p1-verification.md
docs/: OPEN_QUESTIONS.md  PHASE_1_TECHNICAL_DESIGN.md  PHASE_2_TECHNICAL_DESIGN.md  PHASE_3_TECHNICAL_DESIGN.md  PHASE_4_TECHNICAL_DESIGN.md  PRD.md  SCAFFOLD.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: init_db.py
src/tara/: __init__.py  app.py  config.py
src/tara/answering/: answerer.py  prompts.py
src/tara/embeddings/: embedder.py
src/tara/ingestion/: chunk.py  classify.py  detect.py  extract.py  pipeline.py
src/tara/llm/: base.py  hosted.py  local_ollama.py
src/tara/retrieval/: retriever.py
src/tara/safety/: framing.py  triage.py
src/tara/storage/: blobs.py  db.py  models.py  vector.py
src/tara/web/static/: app.js
src/tara/web/templates/: index.html
tests/: conftest.py  eval_harness.py  test_ingestion.py  test_retrieval.py  test_safety.py
