[project]
name = "tara-health"
version = "0.1.0"
description = "TaRa Health — local-first, single-profile AI health & insurance assistant (Phase 1: read-only grounded Q&A)"
requires-python = ">=3.11"

# Phase 1 dependencies, grouped by the layer they serve.
dependencies = [
    # Web / API (local UI)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",   # file uploads
    "jinja2>=3.1",               # template rendering for the simple UI

    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Document parsing (local, no external API calls)
    "docling>=2.0",              # layout-aware parsing + OCR (primary)
    "pymupdf4llm>=0.0.17",       # fast path for clean digital PDFs

    # Embeddings (local, on-device)
    "sentence-transformers>=3.0",

    # Vector store
    "sqlite-vec>=0.1.1",         # vector search inside SQLite

    # Local LLM runtime
    "ollama>=0.3",               # client for local models (Qwen3 / Llama / Gemma)

    # Hosted model (optional, opt-in path)
    "anthropic>=0.34",           # swap/extend for whichever hosted provider you choose
]

[project.optional-dependencies]
# Encrypted-at-rest storage. SQLCipher needs a system lib; keep it optional so
# `pip install .` works out of the box during early dev.
encryption = ["pysqlcipher3>=1.2"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
tara = "tara.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tara"]
